--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -6,7 +6,9 @@
 
 
 
-/* layout */
-@import '../components/Home/';
+/* components */
+@import '../../src/components/Header/header';
+@import '../../src/components/Banner/banner';
+
 
 
