--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -9,6 +9,8 @@
 /* components */
 @import '../../src/components/Header/header';
 @import '../../src/components/Banner/banner';
+@import '../../src/components/Footer/footer';
+
 
 
 
