--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -10,6 +10,7 @@
 @import '../../src/components/Header/header';
 @import '../../src/components/Banner/banner';
 @import '../../src/components/Footer/footer';
+@import '../../src/components/Error404/error404';
 
 
 
