feat(navigation): setup navigation links with Link

--- a/src/components/Error404/_Error404.scss
+++ b/src/components/Error404/_Error404.scss
@@ -17,7 +17,7 @@
         font-size: 2.2rem;
         margin-bottom: 6rem;
     }
-    .a{
+    .back-home{
         text-decoration: underline;
         color: $black-color;
         font-size: 18px;
