--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -129,7 +129,7 @@ body {
   font-size: 2.2rem;
   margin-bottom: 6rem;
 }
-.error404 .a {
+.error404 .back-home {
   text-decoration: underline;
   color: #000000;
   font-size: 18px;
