--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -11,6 +11,8 @@
 @import '../../src/components/Banner/banner';
 @import '../../src/components/Footer/footer';
 @import '../../src/components/Error404/error404';
+@import '../../src/components/Accordion/accordion';
+@import '../../src/components/AccordionGroup/accordionGroup';
 
 
 
