--- a/src/components/Banner/_banner.scss
+++ b/src/components/Banner/_banner.scss
@@ -11,6 +11,7 @@
   font-size: 1.25rem;
   font-weight: bold;
   text-shadow: 2px 2px 5px rgba(0, 0, 0, 0.7);
+  box-shadow: 0 4px 4px rgba(0, 0, 0, 0.2);
   overflow: hidden;
 
   &-img {
