--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -73,6 +73,7 @@ body {
   font-size: 1.25rem;
   font-weight: bold;
   text-shadow: 2px 2px 5px rgba(0, 0, 0, 0.7);
+  box-shadow: 0 4px 4px rgba(0, 0, 0, 0.2);
   overflow: hidden;
 }
 .banner-img {
@@ -192,4 +193,54 @@ body {
   margin-top: 4rem;
   margin-bottom: 4rem;
   max-width: 1023px;
+}
+
+/*** Card ***/
+.card {
+  position: relative;
+  height: 340px;
+  width: 340px;
+  border-radius: 8px;
+  color: #FFFFFF;
+  overflow: hidden;
+  box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+  cursor: pointer;
+}
+.card-cover {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+  border-radius: 4px;
+}
+.card::after {
+  content: "";
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background: linear-gradient(to top, rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0) 60%);
+  z-index: 1;
+}
+.card-title {
+  position: absolute;
+  top: 285px;
+  left: 10px;
+  font-weight: bold;
+  padding: 5px 10px;
+  width: 70%;
+  z-index: 2;
+}
+
+/*** CardGallery ***/
+.card-gallery {
+  justify-items: center;
+  display: grid;
+  grid-template-columns: repeat(3, 1fr); /* Trois colonnes égales */
+  gap: 3rem;
+  padding: 3rem;
+  background-color: #F6F6F6;
+  border-radius: 20px;
+  margin-top: 3rem;
+  margin-bottom: 3rem;
 }
