--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -13,6 +13,8 @@
 @import '../../src/components/Error404/error404';
 @import '../../src/components/Accordion/accordion';
 @import '../../src/components/AccordionGroup/accordionGroup';
+@import '../../src/components/Card/card';
+@import '../../src/components/CardGallery/cardGallery';
 
 
 
