--- a/src/components/CardGallery/_cardGallery.scss
+++ b/src/components/CardGallery/_cardGallery.scss
@@ -11,3 +11,16 @@
     margin-top: 3rem;
     margin-bottom: 3rem;
 }
+
+
+
+/* Media Query "mobile"  (720px ou moins) */
+@media (max-width: 720px) {
+    .card-gallery {
+        grid-template-columns: 1fr;
+        gap: 2rem;
+        padding: 15px;
+        margin: 1rem auto;
+        background-color: $background-color-primary;
+    }
+}
