--- a/src/components/Header/_header.scss
+++ b/src/components/Header/_header.scss
@@ -38,3 +38,28 @@
         }
     }
 }
+
+
+/* Media Query "mobile"  (720px ou moins) */
+@media (max-width: 720px) {
+   
+    .header {
+        margin: 0 16px;
+        padding: 1rem 0rem;
+        margin-bottom: 1rem;
+        margin-top: 0.5rem;
+        .logo {
+            img {
+                height: 48px;
+            }
+        }
+        .nav {
+            width: 145px;
+            margin-right: 15px;
+            .nav-link{
+                font-size: 0.8rem;
+                text-transform: uppercase;
+            }
+        }
+    }
+}
