--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -61,6 +61,26 @@ body {
   left: 0;
 }
 
+/* Media Query "mobile"  (720px ou moins) */
+@media (max-width: 720px) {
+  .header {
+    margin: 0 16px;
+    padding: 1rem 0rem;
+    margin-bottom: 1rem;
+    margin-top: 0.5rem;
+  }
+  .header .logo img {
+    height: 48px;
+  }
+  .header .nav {
+    width: 145px;
+    margin-right: 15px;
+  }
+  .header .nav .nav-link {
+    font-size: 0.8rem;
+    text-transform: uppercase;
+  }
+}
 /*** Banner ***/
 .banner {
   position: relative;
@@ -93,6 +113,31 @@ body {
   z-index: 2;
 }
 
+/* Media Query "mobile"  (720px ou moins) */
+@media (max-width: 720px) {
+  .banner {
+    position: relative;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    height: 130px;
+    width: calc(100% - 30px);
+    font-size: 0.85rem;
+    font-weight: bold;
+    margin: 0 auto;
+    border-radius: 10px;
+  }
+  .banner-img {
+    width: 100%;
+    height: 100%;
+  }
+  .banner h1 {
+    margin: auto;
+    font-size: 1.45rem;
+    width: 60%;
+    margin-left: 20px;
+  }
+}
 /*** Footer ***/
 .footer {
   display: flex;
@@ -232,6 +277,19 @@ body {
   z-index: 2;
 }
 
+/* Media Query "mobile"  (720px ou moins) */
+@media (max-width: 720px) {
+  .card {
+    height: 280px;
+    width: 100%;
+    border-radius: 10px;
+  }
+  .card-title {
+    width: 60%;
+    top: 220px;
+    left: 10px;
+  }
+}
 /*** CardGallery ***/
 .card-gallery {
   justify-items: center;
@@ -243,4 +301,15 @@ body {
   border-radius: 20px;
   margin-top: 3rem;
   margin-bottom: 3rem;
+}
+
+/* Media Query "mobile"  (720px ou moins) */
+@media (max-width: 720px) {
+  .card-gallery {
+    grid-template-columns: 1fr;
+    gap: 2rem;
+    padding: 15px;
+    margin: 1rem auto;
+    background-color: #FFFFFF;
+  }
 }
