--- a/src/components/Error404/_Error404.scss
+++ b/src/components/Error404/_Error404.scss
@@ -25,3 +25,26 @@
 }
 
 
+
+/* Media Query "mobile"  (720px ou moins) */
+@media (max-width: 720px) {
+    .error404{
+        margin-bottom: 7rem;
+    
+        .error-title{
+            font-size: 8rem;
+            margin-top: 5rem;
+            margin-bottom: 3rem;
+        }
+        .error-text{
+            font-size: 1.5rem;
+            margin-bottom: 7rem;
+            margin-left: auto;
+            margin-right: auto;
+            text-align: center;
+        }
+        .back-home{
+            font-size: 18px;
+        }
+    }
+}
