--- a/src/components/Footer/_footer.scss
+++ b/src/components/Footer/_footer.scss
@@ -21,3 +21,11 @@
     }
 }
 
+
+/* Media Query "mobile"  (720px ou moins) */
+@media (max-width: 720px) {
+    .footer-text{
+        width: 40%;
+        text-align: center;
+    }
+}
