--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -158,6 +158,13 @@ body {
   margin-bottom: 1.6rem;
 }
 
+/* Media Query "mobile"  (720px ou moins) */
+@media (max-width: 720px) {
+  .footer-text {
+    width: 40%;
+    text-align: center;
+  }
+}
 .error404 {
   display: flex;
   flex-direction: column;
@@ -182,6 +189,27 @@ body {
   font-size: 18px;
 }
 
+/* Media Query "mobile"  (720px ou moins) */
+@media (max-width: 720px) {
+  .error404 {
+    margin-bottom: 7rem;
+  }
+  .error404 .error-title {
+    font-size: 8rem;
+    margin-top: 5rem;
+    margin-bottom: 3rem;
+  }
+  .error404 .error-text {
+    font-size: 1.5rem;
+    margin-bottom: 7rem;
+    margin-left: auto;
+    margin-right: auto;
+    text-align: center;
+  }
+  .error404 .back-home {
+    font-size: 18px;
+  }
+}
 /*** Accordion ***/
 .accordion {
   margin-bottom: 3rem;
