--- a/src/components/AccordionGroup/_accordionGroup.scss
+++ b/src/components/AccordionGroup/_accordionGroup.scss
@@ -10,3 +10,13 @@
     margin-bottom: 4rem;
     max-width: 1023px;
 }
+
+
+
+/* Media Query "mobile"  (720px ou moins) */
+@media (max-width: 720px) {
+    .accordion-group{
+    padding-left: 15px;
+    padding-right: 15px;
+    }
+}
