feat(carousel): add Carousel component and its styles

--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -15,6 +15,7 @@
 @import '../../src/components/AccordionGroup/accordionGroup';
 @import '../../src/components/Card/card';
 @import '../../src/components/CardGallery/cardGallery';
+@import '../../src/components/Carousel/carousel';
 
 
 
