--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -11,7 +11,6 @@ html {
 }
 
 body {
-  /*background-color: darkgrey; /* couleur de fond pour developpement */
   background-color: #FFFFFF;
   font-family: "Montserrat", sans-serif;
   width: 100%;
@@ -66,7 +65,7 @@ body {
   .header {
     margin: 0 16px;
     padding: 1rem 0rem;
-    margin-bottom: 1rem;
+    margin-bottom: 0.5rem;
     margin-top: 0.5rem;
   }
   .header .logo img {
@@ -362,5 +361,88 @@ body {
     padding: 15px;
     margin: 1rem auto;
     background-color: #FFFFFF;
+  }
+}
+/*** carousel ***/
+.carousel {
+  position: relative;
+  width: 100%;
+  height: 435px;
+  margin: 0 auto;
+  overflow: hidden;
+  border-radius: 20px;
+  margin-bottom: 2rem;
+}
+.carousel .carousel-container {
+  margin-top: 1rem;
+  position: relative;
+  display: flex;
+  align-items: center;
+  justify-content: center; /* Centrer horizontalement les images */
+  width: 100%;
+  height: 100%;
+}
+.carousel .carousel-image {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%); /* Centrer l'image dans le carrousel */
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+  border-radius: 20px;
+}
+.carousel .carousel-button {
+  position: absolute;
+  top: 50%;
+  transform: translateY(-50%); /* Centrer les fleches dans la hauteur */
+  background: none;
+  border: none;
+  cursor: pointer;
+  padding: 0;
+  z-index: 10; /* Positionnement des fleches par dessus le carrousel */
+}
+.carousel .carousel-button.left {
+  left: 10px;
+}
+.carousel .carousel-button.right {
+  right: 10px;
+}
+.carousel .carousel-button img {
+  width: 47px;
+  height: 79px;
+}
+.carousel .carousel-indicator {
+  position: absolute;
+  bottom: 30px;
+  text-align: center;
+  font-size: 18px;
+  color: #FFFFFF;
+  z-index: 5; /* Afficher par dessus l'image */
+}
+
+/* Media Query "mobile"  (720px ou moins) */
+@media (max-width: 720px) {
+  .carousel {
+    width: calc(100% - 30px);
+    margin: 0 15px;
+    height: 255px;
+    margin-bottom: 2.5rem;
+  }
+  .carousel .carousel-container {
+    margin-top: 0rem;
+  }
+  .carousel .carousel-button.left {
+    left: 10px;
+  }
+  .carousel .carousel-button.right {
+    right: 10px;
+  }
+  .carousel .carousel-button img {
+    width: 12px;
+    height: 20px;
+  }
+  .carousel .carousel-indicator {
+    display: none;
   }
 }
