--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -16,6 +16,7 @@
 @import '../../src/components/Card/card';
 @import '../../src/components/CardGallery/cardGallery';
 @import '../../src/components/Carousel/carousel';
+@import '../../src/components/HousingDetails/housingDetails';
 
 
 
