--- a/src/components/Accordion/_accordion.scss
+++ b/src/components/Accordion/_accordion.scss
@@ -1,13 +1,16 @@
 /*** Accordion ***/
 
+@use '../../styles/abstracts/variables';
+
+
 .accordion {
   margin-bottom: 3rem;
   border: none;
   overflow: hidden;
 
   &-header {
-    background-color: $red-color;
-    color: $white-color;
+    background-color: variables.$red-color;
+    color: variables.$white-color;
     padding: 15px;
     display: flex;
     justify-content: space-between;
@@ -20,7 +23,7 @@
     }
 
     .arrow {
-      color: $white-color;
+      color: variables.$white-color;
       width: 20px;
       height: 20px;
       background-image: url('../../assets/icons/accordion_arrow.png');
@@ -41,7 +44,7 @@
     overflow: hidden;
     transition: max-height 0.4s ease, padding 0.4s ease; /* animation expansion */
     padding: 0 15px;
-    background-color: $white-color;
+    background-color: variables.$white-color;
     border: none;
 
     &.open {
