--- a/src/components/Carousel/_carousel.scss
+++ b/src/components/Carousel/_carousel.scss
@@ -1,5 +1,8 @@
 /*** carousel ***/
 
+@use '../../styles/abstracts/variables';
+
+
 .carousel {
     position: relative;
     width: 100%;
@@ -58,7 +61,7 @@
         bottom: 30px;
         text-align: center;
         font-size: 18px;
-        color: $white-color;
+        color: variables.$white-color;
         z-index: 5; /* Afficher par dessus l'image */
     }
 }
