--- a/src/components/Footer/_footer.scss
+++ b/src/components/Footer/_footer.scss
@@ -1,12 +1,15 @@
 /*** Footer ***/
 
+@use '../../styles/abstracts/variables';
+
+
 .footer{
     display: flex;
     flex-direction: column;
     align-items: center;
     justify-content: flex-end;
-    background-color: $background-color-footer;
-    color: $white-color;
+    background-color: variables.$background-color-footer;
+    color: variables.$white-color;
     height: 200px;
 
     .footer-logo{
@@ -15,7 +18,7 @@
     }
     
     .footer-text{
-        color: $white-color;
+        color: variables.$white-color;
         font-size: 16px;
         margin-bottom: 1.6rem;
     }
