--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -26,7 +26,9 @@ body {
 }
 
 /* components */
-/*** Header ***/
+/*** variables ***/
+/* couleurs */
+/* polices */
 .header {
   display: flex;
   justify-content: space-between;
@@ -80,6 +82,9 @@ body {
     text-transform: uppercase;
   }
 }
+/*** variables ***/
+/* couleurs */
+/* polices */
 /*** Banner ***/
 .banner {
   position: relative;
@@ -137,6 +142,9 @@ body {
     margin-left: 20px;
   }
 }
+/*** variables ***/
+/* couleurs */
+/* polices */
 /*** Footer ***/
 .footer {
   display: flex;
@@ -164,6 +172,10 @@ body {
     text-align: center;
   }
 }
+/*** variables ***/
+/* couleurs */
+/* polices */
+/*** Error404 ***/
 .error404 {
   display: flex;
   flex-direction: column;
@@ -209,6 +221,9 @@ body {
     font-size: 18px;
   }
 }
+/*** variables ***/
+/* couleurs */
+/* polices */
 /*** Accordion ***/
 .accordion {
   margin-bottom: 3rem;
@@ -271,6 +286,10 @@ body {
     height: 16px;
   }
 }
+/*** variables ***/
+/* couleurs */
+/* polices */
+/*** AccordionGroup ***/
 .accordion-group {
   display: flex;
   flex-direction: column;
@@ -290,6 +309,9 @@ body {
     padding-right: 15px;
   }
 }
+/*** variables ***/
+/* couleurs */
+/* polices */
 /*** Card ***/
 .card {
   position: relative;
@@ -340,6 +362,9 @@ body {
     left: 10px;
   }
 }
+/*** variables ***/
+/* couleurs */
+/* polices */
 /*** CardGallery ***/
 .card-gallery {
   justify-items: center;
@@ -363,6 +388,9 @@ body {
     background-color: #FFFFFF;
   }
 }
+/*** variables ***/
+/* couleurs */
+/* polices */
 /*** carousel ***/
 .carousel {
   position: relative;
@@ -445,6 +473,9 @@ body {
     display: none;
   }
 }
+/*** variables ***/
+/* couleurs */
+/* polices */
 /* HousingDetails */
 .housing-details {
   margin-bottom: 1rem;
